Navbar and scrollbar fixes

--- a/Unicorn AB.css
+++ b/Unicorn AB.css
@@ -1,11 +1,6 @@
-/*
-* {
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+html {
+    overflow-y: scroll;
 }
-*/
 
 .background {
     background: url(https://i.imgur.com/5lLdMft.jpg) no-repeat center center fixed;
@@ -13,7 +8,8 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  }
+    margin:0;
+}
 
 /***********************************************************************
 ***                      Meny formatering                            ***
@@ -31,7 +27,7 @@
     text-align: center;
 }
   
-li {
+.menulist li {
     display: inline-block;
 }
 
@@ -72,6 +68,7 @@ li a:hover:not(.active) {
     color: white;
     text-align: center;
     margin:auto;
+    margin-bottom: 4%;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
@@ -93,7 +90,10 @@ li a:hover:not(.active) {
 }	
 
 .paragrafer {
-    font: 1em "Bookinsanity";
+    font: 1.5em "Calibri";
+    color: white;
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: black;
     margin: auto;
     text-align: center;
 }
@@ -102,8 +102,9 @@ li a:hover:not(.active) {
     border: 1px solid black;
     background-color: rgba(112,128,144, 0.9);
     padding: 2%;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-top: 2%;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-bottom: 4%;
     border-radius: 25px;
 }
@@ -112,6 +113,18 @@ li a:hover:not(.active) {
     content: "";
     display: table;
     clear: both;
+}
+
+li {
+    font: 1.5em "Calibri";
+    color: white;
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: black;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
 }
 
 /***********************************************************************
